--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ p {
 	width: 100%;
 	height: 2px;
 	margin: 15px 0;
-	background: rgba(255, 255, 255, 0.1);
+	background: rgba(255, 105, 180);
 }
 
 @media only screen and (min-width: 767px) {
@@ -93,7 +93,7 @@ p {
 
 .primary-btn:hover {
 	transition: all 0.1s ease-in-out;
-	color: #21272f;
+	color: #ff69b4;
 	background: #fff;
 	box-shadow: 0 4px 20px 2px rgba(0, 0, 0, 0.2);
 }
