--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ html {
 	width: 100%;
 	height: 100%;
 	min-height: 100%;
-	font-family: sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	-webkit-text-size-adjust: 100%;
 }
 
@@ -31,8 +31,8 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #fff;
-	background: #21272f;
-	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	background: #c46b98;
+	font-family: Roboto;
 	font-size: 100%;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
@@ -72,7 +72,7 @@ p {
 	width: 100%;
 	height: 2px;
 	margin: 15px 0;
-	background: rgba(255, 105, 180);
+	background: rgb(255, 255, 255);
 }
 
 @media only screen and (min-width: 767px) {
